UHF-10910: Alter the label styles for the list of links paragraph.

--- a/src/scss/06_components/paragraphs/_list-of-links.scss
+++ b/src/scss/06_components/paragraphs/_list-of-links.scss
@@ -1,6 +1,6 @@
 .paragraph-type--list-of-links-item {
   .paragraphs-subform {
-    @media (min-width: 1180px) {
+    @media (width >= 1180px) {
       box-sizing: border-box;
       column-gap: 40px;
       display: grid;
@@ -8,8 +8,8 @@
       grid-template-rows: auto auto;
     }
 
-    .field--name-field-list-of-links-image {
-      @media (min-width: 1180px) {
+  .paragraphs-subform .field--name-field-list-of-links-image {
+      @media (width >= 1180px) {
         grid-column-end: 3;
         grid-column-start: 2;
         grid-row-end: 3;
@@ -19,7 +19,7 @@
       }
 
       fieldset {
-        @media (min-width: 1180px) {
+        @media (width >= 1180px) {
           background: transparent;
           border: 0;
           box-shadow: none;
@@ -28,19 +28,19 @@
         }
 
         legend {
-          @media (min-width: 1180px) {
+          @media (width >= 1180px) {
             display: none;
           }
         }
 
         .fieldset__wrapper {
-          @media (min-width: 1180px) {
+          @media (width >= 1180px) {
             margin: 0;
           }
         }
 
         .media-library-selection {
-          @media (min-width: 1180px) {
+          @media (width >= 1180px) {
             margin-top: 0;
           }
         }
@@ -48,14 +48,14 @@
 
       .media-library-widget-modal .media-library-item--grid,
       .media-library-selection .media-library-item--grid {
-        @media (min-width: 1180px) {
+        @media (width >= 1180px) {
           width: 100%;
         }
       }
     }
 
     .field--name-field-list-of-links-link {
-      @media (min-width: 1180px) {
+      @media (width >= 1180px) {
         grid-column-end: 2;
         grid-column-start: 1;
         grid-row-end: 3;
@@ -64,7 +64,7 @@
     }
 
     .field--name-field-list-of-links-desc {
-      @media (min-width: 1180px) {
+      @media (width >= 1180px) {
         grid-column-end: 3;
         grid-column-start: 2;
         grid-row-end: 3;
@@ -78,10 +78,21 @@
   }
 }
 
-// Diff styles
 .paragraph--type--list-of-links {
   margin-top: $spacing-quadruple;
 
+  // Alter the label styles for the list of links paragraph.
+  th.field-label {
+    padding-block: 6px;
+
+    .form-item__label {
+      font-size: 1rem;
+      letter-spacing: normal;
+      padding: 0;
+    }
+  }
+
+  // Diff styles
   .field--name-field-list-of-links-links > .field__item {
     margin-top: $spacing;
   }
