UHF-10910: Stylelint fixes.

--- a/src/scss/06_components/entity/_media.scss
+++ b/src/scss/06_components/entity/_media.scss
@@ -1,9 +1,10 @@
-.media-library-item__name,
-.media-library-item__alt {
+// Media library name and alt text styles.
+.media-library-item__name {
   font-size: 0.875rem;
 }
 
 .media-library-item__alt {
+  font-size: 0.875rem;
   font-weight: 500;
 
   span {
