--- a/src/scss/06_components/navigation/_language-switcher.scss
+++ b/src/scss/06_components/navigation/_language-switcher.scss
@@ -59,7 +59,7 @@
       background: $color-white;
       border: 1px solid $color-black-20;
       border-radius: 0 0 3px 3px;
-      box-shadow: 0 3px 4px #00000033;
+      box-shadow: 0 3px 4px #0003;
       display: flex;
       line-height: 2;
       padding: $spacing;
