UHF-10910: Fix height and jumping issues when toggling paragraph selector

--- a/src/scss/06_components/forms/_form-items.scss
+++ b/src/scss/06_components/forms/_form-items.scss
@@ -9,3 +9,7 @@
 .hdbt-admin .form-item .item-list li {
   margin: 0 0 2px 16px;
 }
+
+.hdbt-admin .field-actions {
+  margin-top: $spacing-and-half;
+}
