--- a/src/scss/06_components/_select2.scss
+++ b/src/scss/06_components/_select2.scss
@@ -3,16 +3,16 @@
   min-height: 50px;
 
   .select2-selection {
-    border: 1px solid var(--colorGinFormElementBorder);
+    border: 1px solid var(--gin-border-color-form-element);
     border-radius: 6px;
     box-shadow: 0 1px 2px rgba($hdbt-color-black, .25);
-    color: var(--colorGinText);
+    color: var(--gin-color-text);
     font-size: remify($base-font-size);
     min-height: 60px;
 
     &:hover {
-      border-color: var(--colorGinText);
-      box-shadow: inset 0 0 0 1px var(--colorGinText);
+      border-color: var(--gin-color-text);
+      box-shadow: inset 0 0 0 1px var(--gin-color-text);
     }
 
     .select2-selection__clear {
@@ -40,7 +40,7 @@
     }
 
     .select2-search__field {
-      color: var(--colorGinText);
+      color: var(--gin-color-text);
       font-size: remify($base-font-size);
       margin: 0;
       min-width: 100px;
@@ -51,26 +51,26 @@
     // Like button--small.
     .select2-selection__choice {
       align-items: center;
-      background: var(--colorGinPrimary);
+      background: var(--gin-color-primary);
       display: flex;
       margin: 0.25rem;
       padding: 0.5rem 1rem;
 
       &:hover {
-        background-color: var(--colorGinPrimaryHover);
+        background-color: var(--gin-color-primary-hover);
       }
 
       &:active, &:focus {
-        background-color: var(--colorGinPrimaryActive);
+        background-color: var(--gin-color-primary-active);
       }
 
       &, &:hover, &:active, &:focus {
-        color: var(--colorGinButtonText);
+        color: var(--gin-color-button-text);
       }
     }
 
     .select2-selection__choice__remove {
-      color: var(--colorGinButtonText);
+      color: var(--gin-color-button-text);
       font-size: remify($base-font-size);
       margin-right: .5rem;
       transition: color 200ms;
@@ -101,12 +101,10 @@
   }
 }
 
-
-
 // Select2 results.
 .select2-container .select2-results__options {
   .select2-results__option {
-    color: var(--colorGinText);
+    color: var(--gin-color-text);
     font-size: remify($base-font-size);
     padding: calc(0.75rem - 1px) calc(1rem - 1px);
   }
