UHF-11449: Mimic the Gin styles for form item label in sticky header.

--- a/src/scss/06_components/layout/_header.scss
+++ b/src/scss/06_components/layout/_header.scss
@@ -12,5 +12,10 @@
     .button {
       margin-block: unset;
     }
+
+    // Mimic Gin .field--name-status styles.
+    .form-item--status .form-item__label {
+      font-size: .8125rem;
+    }
   }
 }
