--- a/src/scss/01_variables/_typography.scss
+++ b/src/scss/01_variables/_typography.scss
@@ -1,7 +1,7 @@
 // Font variables from HDS.
-@import '~hds-design-tokens/lib/typography/font-size.scss';
-@import '~hds-design-tokens/lib/typography/font.scss';
-@import '~hds-design-tokens/lib/typography/line-height.scss';
+@import 'hds-design-tokens/lib/typography/font-size.scss';
+@import 'hds-design-tokens/lib/typography/font.scss';
+@import 'hds-design-tokens/lib/typography/line-height.scss';
 
 $base-font-family: HelsinkiGrotesk, Arial, sans-serif;
 $base-font-size: 16px; // We have to assume that this is the default size in browsers.
