UHF-12283: Added new koro Calm

--- a/src/scss/06_components/misc/_koro.scss
+++ b/src/scss/06_components/misc/_koro.scss
@@ -30,6 +30,6 @@
 }
 
 .hds-koros--calm {
-  --url: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='67' height='50'><rect width='67' height='50' /></svg>");
+  --url: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='67' height='50'><rect x='0' y='25' width='67' height='25' /></svg>");
 }
 
